Fixing newline issue with whitespace:pre-line css

--- a/src/views/htmlcontent/src/styles.css
+++ b/src/views/htmlcontent/src/styles.css
@@ -69,6 +69,10 @@ table {
   padding-bottom: 1em;
 }
 
+#messageTable td.messageValue {
+  white-space: pre-line;
+}
+
 .boxRow.content.padded {
     padding: 15px
 }
